added webpack module and changed grunt tasks

--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "^0.11.1",
     "grunt-contrib-watch": "^0.6.1",
-    "jshint-stylish": "^2.1.0"
+    "grunt-webpack": "^1.0.11",
+    "jshint-stylish": "^2.1.0",
+    "webpack": "^1.13.0",
+    "webpack-dev-server": "^1.14.1"
   },
   "repository": {
     "type": "git",
