--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-cssmin": "^0.14.0",
     "grunt-contrib-jshint": "^0.12.0",
@@ -31,12 +32,13 @@
   "homepage": "https://github.com/BLuciano/luciano-bruzzoni-site#readme",
   "dependencies": {
     "grunt": "^0.4.5",
-    "grunt-contrib-uglify": "^0.11.1",
-    "grunt-contrib-jshint": "^0.12.0",
-    "grunt-contrib-cssmin": "^0.14.0",
     "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-cssmin": "^0.14.0",
+    "grunt-contrib-jshint": "^0.12.0",
     "grunt-contrib-sass": "^0.9.2",
-    "jshint-stylish": "^2.1.0",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-uglify": "^0.11.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "jquery": "^2.2.3",
+    "jshint-stylish": "^2.1.0"
   }
 }
