--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Luciano Bruzzoni",
   "license": "ISC",
   "devDependencies": {
+    "babel-preset-es2015": "^6.6.0",
     "grunt": "^0.4.5",
+    "grunt-babel": "^6.0.0",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-cssmin": "^0.14.0",
