--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Luciano Bruzzoni",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.7.7",
+    "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "grunt": "^0.4.5",
     "grunt-babel": "^6.0.0",
